--- a/src/theme.less
+++ b/src/theme.less
@@ -1,5 +1,4 @@
 // 全局主题色配置文件 全部配置请查看 https://github.com/vueComponent/ant-design-vue/blob/master/components/style/themes/default.less
-@import '~ant-design-vue/dist/antd.less';
 @primary-color: #35aef8;
 @layout-header-background : #fff;
-@link-color: @text-color;
+@link-color: #515a6e;
