--- a/components/error-404/src/theme.less
+++ b/components/error-404/src/theme.less
@@ -1,7 +1,14 @@
-// 全局主题色配置文件 全部配置请查看 https://github.com/iview/iview/blob/2.0/src/styles/custom.less
-@import '~iview/src/styles/index.less';
-@primary-color : #2d8cf0;
-@info-color : #2db7f5;
-@success-color : #19be6b;
-@warning-color : #ff9900;
-@error-color : #ed4014;
+@primary-color: #1890ff; // 全局主色
+@link-color: #1890ff; // 链接色
+@success-color: #52c41a; // 成功色
+@warning-color: #faad14; // 警告色
+@error-color: #f5222d; // 错误色
+@font-size-base: 14px; // 主字号
+@heading-color: rgba(0, 0, 0, 0.85); // 标题色
+@text-color: rgba(0, 0, 0, 0.65); // 主文本色
+@text-color-secondary : rgba(0, 0, 0, .45); // 次文本色
+@disabled-color : rgba(0, 0, 0, .25); // 失效色
+@border-radius-base: 4px; // 组件/浮层圆角
+@border-color-base: #d9d9d9; // 边框色
+@box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // 浮层阴
+@background-color-base : hsv(0, 0, 96%);
