--- a/template/src/theme.less
+++ b/template/src/theme.less
@@ -1,9 +1,15 @@
-// 全局主题色配置文件 全部配置请查看 https://github.com/iview/iview/blob/2.0/src/styles/custom.less
 @import '~iview/src/styles/index.less';
 @primary-color : #2d8cf0;
 @info-color : #2db7f5;
 @success-color : #19be6b;
+@processing-color : @primary-color;
 @warning-color : #ff9900;
 @error-color : #ed4014;
-@title-color : #17233d;
-@text-color : #515a6e;
+@normal-color : #e6ebf1;
+@link-color : #2D8cF0;
+@link-hover-color : tint(@link-color, 20%);
+@link-active-color : shade(@link-color, 5%);
+@selected-color : fade(@primary-color, 90%);
+@tooltip-color : #fff;
+@subsidiary-color : #808695;
+@rate-star-color : #f5a623;
